--- a/style-julia.css
+++ b/style-julia.css
@@ -1,12 +1,20 @@
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+*, *::before, *::after {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
+body {
+	margin: 0 auto;
+}
 
+.content {
+	text-align: center;
+	background-color: black;
+	height: 404px;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
 
 .grid {
 	position: relative;
@@ -19,6 +27,7 @@
 }
 
 /* Common style */
+
 .grid figure {
 	position: relative;
 	float: left;
@@ -51,13 +60,11 @@
 	backface-visibility: hidden;
 }
 
-.grid figure figcaption::before,
-.grid figure figcaption::after {
+.grid figure figcaption::before, .grid figure figcaption::after {
 	pointer-events: none;
 }
 
-.grid figure figcaption,
-.grid figure figcaption > a {
+.grid figure figcaption, .grid figure figcaption>a {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -66,8 +73,10 @@
 }
 
 /* Anchor will cover the whole item by default */
+
 /* For some effects it will show as a button */
-.grid figure figcaption > a {
+
+.grid figure figcaption>a {
 	z-index: 1000;
 	text-indent: 200%;
 	white-space: nowrap;
@@ -84,8 +93,7 @@
 	font-weight: 800;
 } */
 
-.grid figure h2,
-.grid figure p {
+.grid figure h2, .grid figure p {
 	margin: 0;
 }
 
@@ -97,7 +105,9 @@
 /* Individual effects */
 
 /*---------------*/
+
 /***** Julia *****/
+
 /*---------------*/
 
 figure.effect-julia {
@@ -126,15 +136,15 @@ figure.effect-julia p {
 	display: inline-block;
 	margin: 0 0 0.25em;
 	padding: 0.4em 1em;
-	background: rgba(255,255,255,0.9);
+	background: rgba(255, 255, 255, 0.9);
 	color: #2f3238;
 	text-transform: none;
 	font-weight: 500;
 	font-size: 75%;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(-360px,0,0);
-	transform: translate3d(-360px,0,0);
+	-webkit-transform: translate3d(-360px, 0, 0);
+	transform: translate3d(-360px, 0, 0);
 }
 
 figure.effect-julia p:first-child {
@@ -166,29 +176,32 @@ figure.effect-julia:hover p:nth-of-type(3) {
 	/* -webkit-transition-delay: 0.1s; */
 	transition-delay: 1.30s;
 }
+
 figure.effect-julia:hover p:nth-of-type(4) {
 	/* -webkit-transition-delay: 0.1s; */
 	transition-delay: 1.45s;
 }
+
 figure.effect-julia:hover p:nth-of-type(5) {
 	/* -webkit-transition-delay: 0.1s; */
 	transition-delay: 2s;
-
 }
 
 figure.effect-julia:hover img {
 	opacity: 0.4;
-	-webkit-transform: scale3d(1.1,1.1,1);
-	transform: scale3d(1.1,1.1,1);
+	-webkit-transform: scale3d(1.1, 1.1, 1);
+	transform: scale3d(1.1, 1.1, 1);
 }
 
 figure.effect-julia:hover p {
 	opacity: 1;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 }
+
 /* Media queries */
-@media screen and (max-width: 100em) {
+
+@media screen and (max-width: 50em) {
 	.content {
 		padding: 0;
 		text-align: center;
