--- a/style-julia.css
+++ b/style-julia.css
@@ -9,7 +9,7 @@ body {
 
 .content {
 	text-align: center;
-	background-color: black;
+	background-color:#23252b;
 	height: 404px;
 	margin: 0;
 	padding: 0;
