--- a/style-julia.css
+++ b/style-julia.css
@@ -9,11 +9,15 @@ body {
 
 .content {
 	text-align: center;
-	background-color:#23252b;
+	background-color: #23252b;
 	height: 404px;
 	margin: 0;
 	padding: 0;
 	width: 100%;
+}
+
+h2 {
+	font-family: 'Lobster Two', cursive;
 }
 
 .grid {
@@ -54,7 +58,7 @@ body {
 .grid figure figcaption {
 	padding: 2em;
 	color: #fff;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	font-size: 1.25em;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -198,6 +202,22 @@ figure.effect-julia:hover p {
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
 }
+
+@keyframes my-animation {
+	from {
+		opacity: 0;
+		left: -500px;
+	}
+	to {
+		opacity: 1;
+		left: 0;
+	}
+}
+
+.effect-julia {
+	position: relative;
+	animation: my-animation 2s ease;
+  }
 
 /* Media queries */
 
